<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dante.tammoderates.Home" tools:layout_editor_absoluteY="81dp" android:background="@color/backgroundColor">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_text"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/title_label"
            android:textSize="36sp" android:textColor="@color/textColor"
            app:layout_constraintTop_toTopOf="@+id/tamm-icon"
            app:layout_constraintBottom_toBottomOf="@+id/tamm-icon" android:layout_marginEnd="32dp"/>
    <TextView
            android:text="@string/purpose_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purpose_label"
            android:fontFamily="sans-serif-condensed" android:textColor="@color/textColor"
            android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/tamm-icon" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <ImageView
            android:src="@drawable/tammoderates_logo"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:id="@+id/tamm-icon"
            android:contentDescription="@string/tamm_logo_img_desc"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="18dp" app:layout_constraintEnd_toStartOf="@+id/title_label"
            android:layout_marginEnd="18dp" android:layout_marginTop="18dp" app:layout_constraintTop_toTopOf="parent"
    />
    <Button
            android:text="@string/sign_in_button_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/sign_in_button"
            app:layout_constraintTop_toBottomOf="@+id/purpose_label" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" android:layout_marginTop="18dp" app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintBottom_toTopOf="@+id/social_media_button" android:textSize="24sp"
            android:onClick="openSignIn"/>

    <Button
            android:text="@string/social_media_button_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/social_media_button"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
            app:layout_constraintBottom_toTopOf="@+id/officers_button" android:textSize="24sp"
            android:onClick="openSocialMediaActivity"/>

    <Button
            android:text="@string/meet_the_officers_button_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/officers_button" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/social_media_button"
            app:layout_constraintBottom_toTopOf="@+id/about_button" android:textSize="24sp"
            android:onClick="openMeetTheOfficersActivity"/>

    <Button
            android:text="@string/about_button_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/about_button" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toBottomOf="@+id/officers_button"
            app:layout_constraintBottom_toTopOf="@+id/important_dates_button" android:textSize="24sp"
            android:onClick="openAboutActivity"/>

    <Button
            android:text="@string/important_dates_button_label"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/important_dates_button" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="32dp"
            android:layout_marginBottom="18dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/about_button" app:layout_constraintHorizontal_bias="0.5"
            android:textSize="24sp" android:onClick="openImportantDatesActivity"/>

</android.support.constraint.ConstraintLayout>