<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.dante.tammoderates.About" android:background="@color/backgroundColor">

    <TextView
            android:text="@string/about_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/about_label"
            android:textAppearance="@android:style/TextAppearance.Material.Display2"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" tools:text="About"
            android:textColor="@color/grey_100" android:fontFamily="sans-serif-condensed"/>
    <TextView
            android:text="@string/about_body"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/about_body_label" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="22dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="22dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/about_label"
            android:textColor="@color/grey_300" android:textSize="24sp"/>
    <Button
            android:text="@string/apply_button_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/apply_button" android:layout_marginTop="18dp"
            app:layout_constraintTop_toBottomOf="@+id/about_body_label" android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="36dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="36dp" android:elevation="0dp"
            android:onClick="openApply" android:textAllCaps="false"
            android:paddingLeft="32dp" android:paddingRight="32dp" android:background="@drawable/round_rect_button"
            android:fontFamily="sans-serif-condensed" android:textSize="30sp" android:textColor="@color/grey_300"
            android:paddingBottom="12dp" android:paddingTop="12dp"/>
</android.support.constraint.ConstraintLayout>